--- a/src/main/profiles/dcruz/resources/messages.properties
+++ b/src/main/profiles/dcruz/resources/messages.properties
@@ -1,1 +1,3 @@
-customer.name.not_blank = El campo nombre no puede estar vacío.
+customer.name.not_blank = El campo email no puede estar vacío.
+customer.password.not_blank = El campo password no puede estar vacío.
+customer.email.not_blank = El campo email no puede estar vacío.
